<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/loadingPelangganSpinner"
            android:layout_width="29dp"
            android:layout_height="32dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.248"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <TextView
            android:id="@+id/pelangganTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:text="@string/spinner_pelanggan_text"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/celanaEditText" />

        <Spinner
            android:id="@+id/pelangganSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:autofillHints="Isi Nama Pelanggan"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toEndOf="@+id/pelangganTextView"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.632" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:typeface="sans"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/perhitungan_intro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@null"
            android:src="@drawable/chores_washing_clothes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/celanaEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/celanaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:ems="60"
            android:hint="@string/hint_jumlah_celana"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="14sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView3"
            app:layout_constraintTop_toBottomOf="@id/pelangganSpinner" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/bajuEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bajuEditText" />

        <EditText
            android:id="@+id/bajuEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:ems="60"
            android:hint="@string/hint_jumlah_baju"
            android:importantForAutofill="no"
            android:typeface="sans"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/celanaEditText"
            app:layout_constraintTop_toBottomOf="@id/celanaEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:text="@string/jenis_cucian"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:typeface="sans"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/bajuEditText"
            app:layout_constraintTop_toBottomOf="@id/bajuEditText">

            <RadioButton
                android:id="@+id/keringRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kering"
                android:textSize="14sp"
                android:typeface="sans" />

            <RadioButton
                android:id="@+id/basahRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="3"
                android:typeface="sans"
                android:text="@string/basah" />

        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hitung"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/kategoriSpinner" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="16dp"
            android:text="@string/reset_button"
            app:layout_constraintStart_toStartOf="@id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/kategoriSpinner" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button" />

        <TextView
            android:id="@+id/laundryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="14sp"
            tools:text="Jumlah : 24000"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/kategoriTextView"
            android:layout_width="164dp"
            android:layout_height="17dp"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:typeface="sans"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/laundryTextView"
            tools:text="Kategori cucian : Sedikit" />

        <TextView
            android:id="@+id/jenisTextView"
            android:layout_width="164dp"
            android:layout_height="17dp"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintTop_toBottomOf="@id/kategoriTextView"
            tools:text="Jenis cucian : Basah" />

        <Button
            android:id="@+id/lengkapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/lihat_selengkapnya"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bagikanButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jenisTextView" />

        <Button
            android:id="@+id/bagikanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="10dp"
            android:text="@string/bagikan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lengkapButton"
            app:layout_constraintTop_toTopOf="@+id/lengkapButton" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/buttonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="lengkapButton,bagikanButton"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/kategoriCucianTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:text="@string/spinner_kategori_text"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/button" />

        <Spinner
            android:id="@+id/kategoriSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginLeft="55dp"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toEndOf="@+id/kategoriCucianTextView"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>